28.0.13
-------

28.0.12
-------
(RB=1905097)
Improve debug logging in RequestFinalizers.

28.0.11
-------
(RB=1896287)
Make symbol table path handling more robust to handle D2 URIs

(RB=1903191)
Allow incompatible rest model changes in restli-int-test-server

(RB=1896169)
PDL: Verify translated schemas by writing to temporary location and comparing them with source schemas. Enable option to keep source files or remove them.

28.0.10
-------
(RB=1878207)
Support to set up custom request handler in restli config

(RB=1851797)
Optimize Jackson data decoder to create DataMaps with proper capacity.

(RB=1896607)
Fix the failing AclAwareZookeeperTest

28.0.9
------
(RB=1885019)
Fix a bug in query tunneling affecting URIs containing keys with encoded reserved Rest.li protocol 2.0.0 characters

28.0.8
------
(RB=1894680)
Add debug logging to client/server request finalizers.

28.0.7
------
(RB=1891665)
Allow waiting until zookeeper connection establishes before ZKconnection#start returns

(RB=1882082)
Adds equality/hash methods for ActionResult class

(RB=1894377)
Disable setup and teardown for SymlinkAwareZooKeeperTest

(RB=1892519)
Bump TestNG to enable @Ignore annotation

(RB=1891356)
Log the mime types that failed to parse with error log level before propagating exception. Fix bugs in encoding symbol table names with special characters

(RB=1851420)
add clone method, resolvedProperties to DataSchema methods, changes to MapDataSchema PathSpec to have key fields reference, Add pathSpec format validation function

(RB=1889124)
Add configuration to disable generating deprecated protocol version 1.0.0 request builders.

(RB=1890675)
Disable SymlinkAwareZooKeeperTest temporarily

28.0.6
------
(RB=1887898)
Remove accept header for individual mux requests

(RB=1864201)
Support for data template schema field string literals in PDL

28.0.5
------
(RB=1883213)
Update SchemaToPdlEncoder interface

28.0.4
------
(RB=1885898)
Add the HeaderBasedCodecProvider interface back
