@@ -1,5 +1,7 @@
 28.0.13
 -------
+(RB=1874221)
+Mark data schema directories as resource roots
 
 28.0.12
 -------
